2004-11-04  Mark D. Baushke  <mdb@cvshome.org>
	
	* sanity.sh (set_bad_tool, is_bad_tool): Avoid printing errors
	about the same tool multiple times.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (depends_on_rsync): Deal with missing rsync.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (depends_on_rsync): Include rsync version information
	in output.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* sanity.sh (depends_on_rsync): More rigorous tests for rsync
	2.3.1 problems with --delete --include dir --exclude '*/.

2004-11-03 Derek Price <derek@ximbiot.com>

	* sanity.sh (depends_on_rsync): Verify that `rsync --delete' actually
	does what it is supposed ot do.

2004-11-03 Derek Price <derek@ximbiot.com>

	* subr.c (Xreadlink): Remove MAXSIZE macro.  Minor reformatting.

2004-11-03  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (xreadlink): Remove and use GNULIB version.
	(islink): Return ssize_t instead of bool.
	(copy_file): Use Xreadlink().
	* cvs.h: Add include "xreadlink.h"
	(islink): Return ssize_t instead of bool.
	* import.c (preserve_initial_permissions): Use Xreadlink.
	* rcs.c (RCS_checkin): Ditto.
	* update.c (special_file_mismatch): Ditto.
	* subr.c (get_file): Ditto.
	(resolve_symlink): Ditto.
	(Xreadlink): New interface to xreadlink(), never return NULL.

2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (MAXSIZE): New macro.
	(xreadlink): Ensure initial buffer size does not exceed MAXSIZE.
	Avoid cast. If readlink fails with buffer size just under MAXSIZE,
	try again with MAXSIZE.

2004-11-02  Mark D. Baushke  <mdb@cvshome.org>

	* filesubr.c (xreadlink): AIX and HP-UX readlink() returns ERANGE
	when there is not enough room in the buffer.

2004-11-01 Derek Price <derek@ximbiot.com>

	* cvs.h: Remove getdate proto in favor of including getdate.h.
	* client.c (handle_mod_time), history.c (history), main.c (Make_Date,
	format_date_alloc), rcs.c (RCS_getrevtime), server.c